--- a/src/app/layout/default/menu-link/menu-link.component.scss
+++ b/src/app/layout/default/menu-link/menu-link.component.scss
@@ -1,20 +1,21 @@
 a, span {
-    display: inline-block;
-    padding: var(--spacing-sm) var(--spacing-md);
-    font-size: var(--font-size-sm);
-    font-weight: 500;
-    color: var(--color-text-primary);
-    text-decoration: none;
-    border-radius: var(--radius-md);
-    transition: all var(--transition);
-  }
+  display: inline-block;
+  padding: 0;
+  font-size: var(--font-size-sm);
+  font-weight: 500;
+  color: var(--color-text-primary);
+  text-decoration: none;
+  border-radius: var(--radius-md);
+  transition: all var(--transition);
+  color: var(--color-primary)
+}
 
-  a {
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  span.current {
+a {
+  &:hover {
     text-decoration: underline;
   }
+}
+
+span.current {
+  text-decoration: underline;
+}
