--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -7,19 +7,19 @@
         </li>
       }
     </ul>
+    <ul>
+      @for (link of links(); track link.id) {
+        <li>
+          <app-menu-link [link]="link.route" [secondary]="true">{{ link.title }}</app-menu-link>
+        </li>
+      }
+    </ul>
   </nav>
   <h1 class="header__title">Ahmad Shahwan</h1>
   <p class="header__subtitle">{{ header()?.subtitle }}</p>
   <div class="header__page-header">
     <div class="header__page-header__content">
       <h2 class="header__page-header__content__title">{{ page()?.title }}</h2>
-      <nav class="header__page-header__content__menu">
-        @for (link of links(); track link.id) {
-          @if (!isCurrentRoute(link.route)) {
-            <app-menu-link [link]="link.route">{{ link.title }}</app-menu-link>
-          }
-        }
-      </nav>
     </div>
   </div>
 </header>
