--- a/src/app/layout/default/menu-link/menu-link.component.scss
+++ b/src/app/layout/default/menu-link/menu-link.component.scss
@@ -3,19 +3,23 @@ a, span {
   padding: 0;
   font-size: var(--font-size-sm);
   font-weight: 500;
-  color: var(--color-text-primary);
   text-decoration: none;
   border-radius: var(--radius-md);
   transition: all var(--transition);
-  color: var(--color-primary)
+  color: var(--color-primary);
+
+  &.secondary {
+    color: var(--color-text-secondary);
+    font-size: var(--font-size-xs);
+  }
+
+  &.current {
+    text-decoration: underline;
+  }
 }
 
 a {
   &:hover {
     text-decoration: underline;
   }
-}
-
-span.current {
-  text-decoration: underline;
 }
