--- a/src/app/pages/expertise/skill/skill.component.html
+++ b/src/app/pages/expertise/skill/skill.component.html
@@ -4,9 +4,11 @@
       <img class="thumbnail" [ngSrc]="model.icon.url" height="36" width="36" [alt]="model.title" />
     </div>
     <div content>
-      <div class="header" [style.width]="proficiencyAsPercentage">{{ model.title }}</div>
-      <div class="description">
-        {{ model.details }}
+      <div class="skill__content">
+        <div class="skill__content__header">{{ model.title }}</div>
+        <div class="skill__content__description">
+          {{ model.details }}
+        </div>
       </div>
     </div>
   </app-entry>
