--- a/src/app/pages/education/degree/degree.component.html
+++ b/src/app/pages/education/degree/degree.component.html
@@ -4,14 +4,14 @@
       <img class="thumbnail" [ngSrc]="model.icon.url" height="32" width="32" [alt]="model.institution">
     </div>
     <div content>
-      <div class="degree__details">
-        <div class="degree__details__title">
+      <div class="degree__content">
+        <div class="degree__content__title">
           {{ model.title }}
         </div>
-        <div class="degree__details__institution">
+        <div class="degree__content__institution">
           {{ model.institution }}
         </div>
-        <div class="degree__details__year">
+        <div class="degree__content__year">
           {{ model.year }}
         </div>
       </div>
