--- a/src/app/shared/entry/entry.component.scss
+++ b/src/app/shared/entry/entry.component.scss
@@ -10,4 +10,8 @@
         flex: 0 0 var(--left-margin);
         padding-right: var(--spacing-lg);
     }
+
+    &__content {
+        width: 100%;
+    }
 }
