--- a/src/app/pages/education/degree/degree.component.scss
+++ b/src/app/pages/education/degree/degree.component.scss
@@ -1,9 +1,10 @@
 .degree {
     width: 100%;
-    &__details {
+
+    &__content {
         display: grid;
-        grid-template-columns: auto max-content;
-        margin-bottom: var(--spacing-sm);
+        grid-template-columns: 1fr auto;
+        padding-bottom: var(--spacing-md);
         font-size: var(--font-size-sm);
         align-items: baseline;
         width: 100%;
@@ -11,10 +12,14 @@
         &__title {
             order: 1;
             grid-column: 1 / span 2;
+            font-weight: 600;
+            color: var(--color-text);
         }
 
         &__institution {
             order: 2;
+            font-weight: 600;
+            color: var(--color-text-secondary);
         }
 
         &__year {
