--- a/src/app/layout/default/header/header.component.html
+++ b/src/app/layout/default/header/header.component.html
@@ -15,11 +15,11 @@
       }
     </ul>
   </nav>
-  <h1 class="header__title">Ahmad Shahwan</h1>
-  <p class="header__subtitle">{{ header()?.subtitle }}</p>
+  <h1 class="header__title no-wrap">Ahmad Shahwan</h1>
+  <p class="header__subtitle no-wrap">{{ header()?.subtitle }}</p>
   <div class="header__page-header">
     <div class="header__page-header__content">
-      <h2 class="header__page-header__content__title">{{ page()?.title }}</h2>
+      <h2 class="header__page-header__content__title no-wrap">{{ page()?.title }}</h2>
     </div>
   </div>
 </header>
