--- a/src/app/pages/teaching/institution/institution.component.scss
+++ b/src/app/pages/teaching/institution/institution.component.scss
@@ -1,30 +1,7 @@
-:host {
-  display: block;
-  margin-bottom: var(--spacing-xl);
-}
+.institution {
+  padding-bottom: var(--spacing-md);
 
-.head {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: var(--spacing-md) var(--spacing-lg);
-  background: var(--color-surface);
-  border-radius: var(--radius-lg);
-  margin-bottom: var(--spacing-md);
-  border: 1px solid var(--color-border-light);
-
-  h3 {
-    margin: 0;
-    font-size: var(--font-size-lg);
-    font-weight: 600;
-    color: var(--color-text);
-  }
-
-  img {
-    width: 40px;
-    height: 40px;
-    border-radius: var(--radius-md);
-    object-fit: contain;
+  &__name {
+    padding-bottom: var(--spacing-sm);
   }
 }
