--- a/src/app/layout/default/footer/footer.component.html
+++ b/src/app/layout/default/footer/footer.component.html
@@ -1,13 +1,13 @@
-<footer id="footer">
-  <div class="footer-content">
-    <div class="socials">
+<footer class="footer">
+  <div class="footer__content">
+    <div class="footer__content__socials">
       @for (link of (footer | async)?.socialLinks; track link.id) {
-        <a target="_blank" [href]="link.url" class="social-link" [attr.aria-label]="link.title">
+        <a target="_blank" [href]="link.url" class="footer__content__socials__link" [attr.aria-label]="link.title">
           <img [alt]="link.title" [ngSrc]="link.icon.url" height="24" width="24" />
         </a>
       }
     </div>
-    <p class="address">
+    <p class="footer__content__address">
       {{ (footer | async)?.address }}
     </p>
   </div>
