Adjust menu style for mobile

--- a/src/app/layout/default/header/header.component.scss
+++ b/src/app/layout/default/header/header.component.scss
@@ -30,7 +30,7 @@
       column-gap: var(--spacing-lg);
 
       @include small {
-        column-gap: var(--spacing-sm);
+        column-gap: var(--spacing-md);
       }
 
       li {
