Allow eperiences with no details

--- a/src/app/pages/career/experience/experience.component.html
+++ b/src/app/pages/career/experience/experience.component.html
@@ -20,7 +20,7 @@
           <div>
             {{ model.summary.text }}
           </div>
-          <div class="details" [hidden]="moreHidden" [innerHTML]="model.details.html"></div>
+          <div class="details" [hidden]="moreHidden" [innerHTML]="model.details?.html"></div>
         </div>
       </div>
     </div>
