Adjust styling for long french dates

--- a/src/app/pages/career/experience/experience.component.html
+++ b/src/app/pages/career/experience/experience.component.html
@@ -9,10 +9,10 @@
           <span class="period">
             {{ model.period }}
           </span>
-          <span class="job-title">
+          <span class="job-title no-wrap">
             {{ model.title }}
           </span>
-          <span class="client">
+          <span class="client no-wrap">
             {{ model.partner }}
           </span>
         </div>
